# Nexus-Systems

./: .gitignore  .gitmodules  ARCHITECTURE.md  NEXUS_ROUTER_IMPLEMENTATION_SUMMARY.md  README.md  demo-flow.sh  demo.sh  e2e-test.sh  smoke-test.sh
apps/Nexus-Database/: AGENTS.md  Cargo.toml  README.md  check.sh
apps/Nexus-Database/crates/database-engine/: Cargo.toml
apps/Nexus-Database/crates/database-server/: Cargo.toml
apps/Nexus-Database/docs/: README.md
apps/Nexus-GPU-Test/backend/: pyproject.toml
apps/Nexus-GPU-Test/backend/app/: config.py  deps.py  main.py  models.py
apps/Nexus-Modeling/: AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  ROADMAP.md  check.sh  main.cpp
apps/Nexus-Modeling/.claude/: settings.local.json
apps/Nexus-Modeling/.claude/agents/: animation-engineer.md  asset-pipeline-engineer.md  build-engineer.md  code-reviewer.md  geometry-engineer.md  gpu-backend-engineer.md  neural-engineer.md  parametric-engineer.md  render-engineer.md  simulation-engineer.md  software-architect.md  test-engineer.md
apps/Nexus-Modeling/.claude/commands/: feature.md  harden.md  kreview.md
apps/Nexus-Modeling/.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
apps/Nexus-Modeling/.github/workflows/: kernel-health.yml
apps/Nexus-Modeling/app/: main.cpp
apps/Nexus-Modeling/docs/: DEVELOPMENT.md  FRD.md  GEOMETRY_KERNEL_COMPENDIUM.md  HANDOFF-CHARTER.md  PRD.md  README.md  SDD.md  api-contract-alpha-summary.md  api-freeze-alpha.md  api-freeze-v0.md  design-decisions.md  generate_html.py  getting-started.md  graphics-kernel.md  hardening-debt-ledger.md  kernel-baseline-report.md  kernel-capability-map.md  kernel-logbook.md  memory-lifetime-report.md  modeling-industry-parity.md  modeling-parity-index.md  modeling-reference-roadmap.md  month-12-alpha-compatibility-report.md  month-13-rt-and-simulation-coupling.md  month-2-geometry-checklist.md  month-3-render-checklist.md  month-4-parametric-checklist.md  perf-benchmark-matrix.md  reference-roadmap.md  release-notes-1.0-alpha-draft.md  shader-pipeline.md  testing-strategy.md  ux-baseline-charter.md  vision-and-roadmap.md  vscode-agent-setup.md
apps/Nexus-Modeling/docs/beginner/: getting-started.md
apps/Nexus-Modeling/docs/developer/: adding-cad-feature.md  adding-geometry-op.md  analytic-brep.md  architecture.md  boolean-csg.md  build-system.md  (+10 more)
apps/Nexus-Modeling/runtime/: CMakeLists.txt  main.cpp
apps/Nexus-Modeling/shaders/: composite.frag  composite.vert  geometry.frag  geometry.vert
apps/Nexus-Modeling/tests/: CMakeLists.txt
apps/Nexus-Modeling/tools/: create_alpha_tag.sh  release_gate_alpha.sh
apps/Nexus-Video/backend/: pyproject.toml
apps/Nexus-Wiki/: AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/Nexus-Wiki/docs/: README.md  nexus-cloud-registration-contract.md
apps/Nexus-Wiki/tests/: test_api.py
apps/VersaTone/: .clang-format  .clang-tidy  .gitignore  AudioEngine.cpp  CMakeLists.txt  LICENSE  README.md  USAGE.md  build.sh
apps/VersaTone/.copilot/: custom-instructions.md
apps/VersaTone/.github/: copilot-instructions.md
apps/VersaTone/docs/: architecture.md  build-system.md  deployment.md  development.md  example_aiff.md  example_flac.md  files.md  industry-domination-strategy.md  integration-guide.md  new-audio-engine-architecture.md  next_format_flac.md  professional-voice-analysis.md  project-overview.md  roadmap.md  test_aiff.md  test_flac.md  testing.md  timeline_api.md  voice-count-reality-check.md
apps/VersaTone/editor/: CMakeLists.txt  CMakeLists.txt.bak  resources
apps/VersaTone/engine/: CMakeLists.txt  CMakeLists.txt.bak  test_transport  test_transport.cpp  test_vm.cpp
apps/VersaTone/examples/: CMakeLists.txt  basic_example.cpp  midi_example.cpp  midi_processor.cpp  realtime_audio_demo.cpp  realtime_effects.cpp  simple_player.cpp  simple_test.cpp  standalone_audio_engine.cpp  standalone_integration_demo.cpp  voice_demo.cpp  voice_system_demo.cpp
apps/VersaTone/scripts/: fix_namespaces.ps1  generate_cmake_additions.ps1  generate_dsp_placeholders.ps1
apps/VersaTone/tests/: CMakeLists.txt  comprehensive_dsp_test.cpp  debug_compressor.cpp  debug_reverb.cpp  minimal_multi_tier_demo.cpp  test_multi_tier_allocation.cpp  test_multi_tier_voices.cpp  test_pattern_sequencer.cpp  test_wasapi_callback.cpp
apps/VersaTone/tools/: CMakeLists.txt  audio_analyzer.cpp  voice_profiler.cpp
dhts/ecosystem-cpp-utility-toolkit/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  COMPLETE_CATALOG.md  GEMINI.md  LICENSE  README.md  STATISTICS.txt
dhts/ecosystem-cpp-utility-toolkit/cmake/: nexus_utility_toolkit-config.cmake.in
dhts/ecosystem-cpp-utility-toolkit/examples/: CMakeLists.txt  example_usage.cpp
dhts/ecosystem-cpp-utility-toolkit/scripts/: complete_utilities_manifest.py  fix_all.py  fix_all_includes.py  fix_includes.py  fix_macros.py  flesh_batch1.py  flesh_batch2.py  flesh_batch3.py  flesh_batch4.py  flesh_batch5.py  flesh_debug.py  flesh_network.py  flesh_out_stubs.py  flesh_out_stubs_v2.py  flesh_out_stubs_v3.py  flesh_security.py  flesh_security2.py  gen_all.py  generate_all_utilities.py  generate_implementations.py  generate_master_utilities.py  generate_utilities.py  impl_gen.py  simplify_all.py  simplify_mismatched.py
dhts/ecosystem-cpp-utility-toolkit/tests/: CMakeLists.txt  phase10_verification.cpp.bak  phase11_verification.cpp.bak  phase12_verification.cpp.bak  phase13_verification.cpp.bak  phase14_verification.cpp.bak  phase15_verification.cpp.bak  phase16_verification.cpp.bak  phase17_verification.cpp.bak  phase18_verification.cpp.bak  phase19_verification.cpp.bak  phase1_enhancements_verification.cpp.bak  phase1_verification.cpp.bak  phase20_verification.cpp.bak  phase21_verification.cpp.bak  phase2_verification.cpp.bak  phase3_logging_verification.cpp.bak  phase3_verification.cpp.bak  phase4_verification.cpp.bak  phase5_verification.cpp.bak  phase6_verification.cpp.bak  phase7_verification.cpp.bak  phase8_verification.cpp.bak  phase9_verification.cpp.bak
(+3515 files in other folders)
